# aws-sdk-cpp

./: CMakeLists.txt
aws-cpp-sdk-cognito-sync-manager/: CMakeLists.txt
aws-cpp-sdk-cognito-sync-manager/include/aws/cognito-sync-manager/: CognitoSyncManager.h  CognitoSyncManager_EXPORTS.h  DataSetRecordsRepository.h  DataSetUpdatedListener.h  DefaultDataSetRecordsRepository.h  DefaultDataSetUpdatedListener.h
aws-cpp-sdk-cognito-sync-manager/include/aws/cognito-sync-manager/apple/: APNSDataSetUpdatedListener.h
aws-cpp-sdk-cognito-sync-manager/source/: CognitoSyncManager.cpp  DefaultDataSetRecordsRespository.cpp  DefaultDataSetUpdatedListener.cpp
aws-cpp-sdk-cognito-sync-manager/source/apple/: APNSDataSetUpdatedListener.mm
aws-cpp-sdk-core/include/aws/core/utils/memory/stl/: AWSMap.h  AWSSet.h  AWSString.h
aws-cpp-sdk-identity-management/include/aws/identity-management/auth/: CognitoCachingCredentialsProvider.h  PersistentCognitoIdentityProvider.h
